--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                   <div class="titlepage">
                      <h2>Web Development</h2>
                      <span></span>
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
+                     <p>We are profession at Web Development and deliveling not only a light and fast solution but also a scalable and robust one.</p>
                      <a class="read_more">Read More <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                   </div>
                </div>
@@ -185,7 +185,7 @@
                   <div class="titlepage">
                      <h2>Mobile App Development</h2>
                      <span></span>
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
+                     <p> Whether you are looking for an application solution to solve the bussiness need or an event app we have you covered. </p>
                      <a class="read_more">Read More <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                   </div>
                </div>
@@ -207,7 +207,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="clients_box">
-                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
+                     <p>I do not know where we could be without them. Hiting milstones is in the culture!</p>
                   </div>
                   <div class="jonu">
                      <img src="images/cross_img.png" alt="#"/>
@@ -271,13 +271,13 @@
                         <div class="col-md-5 offset-md-1 padding_bottom1">
                            <h3>Links</h3>
                            <ul class="cont">
-                              <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </li>
+                              <li>Contact us to get a free quote </li>
                            </ul>
                         </div>
                         <div class="col-md-5 offset-md-1">
                            <h3>Contact us</h3>
                            <ul class="cont">
-                              <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </li>
+                              <li>Contact us to get a free quote </li>
                            </ul>
                         </div>
                      </div>
@@ -288,7 +288,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>© 2019 All Rights Reserved. <a href="https://html.design/"> Free Html Templates</a></p>
+                        <p>© 2024 All Rights Reserved. <a href="https://dmiano.github.io/"> dkauzi </a></p>
                      </div>
                   </div>
                </div>
