--- a/clients.html
+++ b/clients.html
@@ -100,7 +100,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="clients_box">
-                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
+                     <p> KTech has been an amazing help in all our projects. Big Kudos to the team! I would definetly recommennd them to anyone looking to outsorce.</p>
                   </div>
                   <div class="jonu">
                      <img src="images/cross_img.png" alt="#"/>
