--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
                   <div class="titlepage">
                      <h2>About Us</h2>
                      <span></span>
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
+                     <p>We are and IT consultuncy focused on Can do attitude!</p>
                      <a class="read_more">Read More <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                   </div>
                </div>
@@ -125,13 +125,13 @@
                         <div class="col-md-5 offset-md-1 padding_bottom1">
                            <h3>Links</h3>
                            <ul class="cont">
-                              <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </li>
+                              <li>Contact us and get a free quote </li>
                            </ul>
                         </div>
                         <div class="col-md-5 offset-md-1">
                            <h3>Contact us</h3>
                            <ul class="cont">
-                              <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do </li>
+                              <li>Contact us and get a free quote </li>
                            </ul>
                         </div>
                      </div>
