--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>© 2019 All Rights Reserved. <a href="https://html.design/"> Free Html Templates</a></p>
+                        <p>© 2024 All Rights Reserved. <a href="https://dkauzi.github.io/"> </a></p>
                      </div>
                   </div>
                </div>
