--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>© 2019 All Rights Reserved. <a href="https://html.design/"> Free Html Templates</a></p>
+                        <p>© 2019 All Rights Reserved. <a href="https://dmiano.github.io/">.</a></p>
                      </div>
                   </div>
                </div>
